# Monopoly

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
sockpp/: CHANGELOG.md  README.md
sockpp/include/sockpp/: acceptor.h  tcp_acceptor.h
sockpp/src/: connector.cpp
src/client/: HelperFunctions.cpp  main.cpp
src/client/ClientCommunicationToolbox/: ClientCommunicationToolbox.cpp  ClientCommunicationToolbox.h  ClientNetworkManager.cpp  ClientNetworkManager.h  ConnectionThread.cpp  ConnectionThread.h  ResponseListenerThread.cpp  ResponseListenerThread.h
src/client/QtWindows/: ActingWindow.h  LobbyWindow.cpp  LobbyWindow.h  LobbyWindow.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PopupWindow.cpp  PopupWindow.h  PopupWindow.ui  sourceMainWindow.qrc
src/common/: default.conf
src/common/Cell/: Avenue.cpp  Avenue.hpp  Cell.cpp  Cell.hpp  EventTriggerer.cpp  EventTriggerer.hpp  Go2Jail.cpp  Go2Jail.hpp  GoAndFreeParking.cpp  GoAndFreeParking.hpp  Jail.cpp  Jail.hpp  Railway.cpp  Railway.hpp  Tax.cpp  Tax.hpp  Utility.cpp  Utility.hpp
src/common/exceptions/: MonopolyException.hpp
src/common/game_state/: EventExecutor.cpp  EventExecutor.h  Game.cpp  Game.h  Game.hpp
src/common/game_state/events/: Event.cpp  Event.h
src/common/game_state/player/: Player.cpp  Player.hpp
src/common/network/requests/: BuyBuildingRequest.cpp  BuyBuildingRequest.h  BuyPropertyRequest.cpp  BuyPropertyRequest.h  ClientRequest.cpp  ClientRequest.h  EndTurnRequest.cpp  EndTurnRequest.h  JoinLobbyRequest.cpp  JoinLobbyRequest.h  RollDiceRequest.cpp  RollDiceRequest.h  SellBuildingRequest.cpp  SellBuildingRequest.h  SellPropertyRequest.cpp  SellPropertyRequest.h  StartGameRequest.cpp  StartGameRequest.h  UseGetOutOfJailFreeRequest.cpp  UseGetOutOfJailFreeRequest.h
src/common/network/responses/: FullStateResponse.cpp  FullStateResponse.h  RequestResponse.cpp  RequestResponse.h  ServerResponse.cpp  ServerResponse.h
src/common/serialization/: json_utils.h  serializable.h  serializable_value.h  unique_serializable.cpp  unique_serializable.h  vector_utils.h
src/server/: GameInstance.cpp  GameInstance.h  GameInstanceManager.cpp  GameInstanceManager.h  PlayerManager.cpp  PlayerManager.h  RequestHandler.cpp  RequestHandler.h  ServerNetworkManager.cpp  ServerNetworkManager.h  main.cpp
unit-tests/: CMakeLists.txt  Game.cpp
